tests/specs/abstract_class.txt
# mod.ts
export abstract class Class {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export abstract class Class {}
  | ^

# output.txt
Defined in file:///mod.ts:0:1

abstract class Class



# output.json
{
  "imports": [],
  "symbols": [
    {
      "name": "Class",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 0,
            "byteIndex": 0
          },
          "declarationKind": "export",
          "kind": "class",
          "def": {
            "isAbstract": true,
            "constructors": [],
            "properties": [],
            "indexSignatures": [],
            "methods": [],
            "extends": null,
            "implements": [],
            "typeParams": [],
            "superTypeParams": []
          }
        }
      ]
    }
  ]
}
